[gd_scene load_steps=5 format=3 uid="uid://bl0s8fhns55ok"]

[ext_resource type="Script" path="res://scripts/config_menu.gd" id="1_g2ygs"]
[ext_resource type="Texture2D" uid="uid://drjkd7gnmpw3y" path="res://assets/images/bcaf52a0-a653-4a54-a1a7-5b1df73bf922_2.png" id="2_5ce76"]
[ext_resource type="Theme" uid="uid://bx5ew11l5r0ch" path="res://assets/temas/config_menu.tres" id="3_abp67"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h4dht"]
texture = ExtResource("2_5ce76")

[node name="Menus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -56.0
offset_right = 72.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2ygs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_h4dht")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -143.5
offset_right = 256.0
offset_bottom = 32.5
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_abp67")

[node name="Voltar" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Voltar
"

[node name="Audio" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Áudio"

[node name="Video" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Vídeo
"

[node name="Controles" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Controles"

[node name="Idiomas" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "idiomas
"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Idiomas" to="." method="_on_idiomas_pressed"]
